// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/TooltipBase/Arrow should renders correctly bottom center 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderStyle": "solid",
        "height": 0,
        "position": "absolute",
        "width": 0,
      },
      Object {
        "width": 20,
      },
      Object {
        "borderBottomColor": "transparent",
        "borderBottomWidth": 0,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 24,
        "borderRightColor": "transparent",
        "borderRightWidth": 24,
        "borderTopColor": "#20242D",
        "borderTopWidth": 24,
        "bottom": -24,
      },
      Object {
        "alignSelf": "center",
      },
    ]
  }
/>
`;

exports[`@npm/mobydick-core/TooltipBase/Arrow should renders correctly bottom end 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderStyle": "solid",
        "height": 0,
        "position": "absolute",
        "width": 0,
      },
      undefined,
      Object {
        "borderBottomColor": "transparent",
        "borderBottomWidth": 0,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 24,
        "borderRightColor": "transparent",
        "borderRightWidth": 24,
        "borderTopColor": "#20242D",
        "borderTopWidth": 24,
        "bottom": -24,
      },
      Object {
        "right": 10,
      },
    ]
  }
/>
`;

exports[`@npm/mobydick-core/TooltipBase/Arrow should renders correctly top start 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderStyle": "solid",
        "height": 0,
        "position": "absolute",
        "width": 0,
      },
      Object {
        "width": 20,
      },
      Object {
        "borderBottomColor": "#20242D",
        "borderBottomWidth": 24,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 24,
        "borderRightColor": "transparent",
        "borderRightWidth": 24,
        "borderTopColor": "transparent",
        "borderTopWidth": 0,
        "top": -24,
      },
      Object {
        "left": 10,
      },
    ]
  }
/>
`;
